Spring boot and Kotlin version bumped up